2005-08-08   Wolfgang Baer <WBaer@gmx.de>

	* kaffe/man/kaffe.1.xml,
	kaffe/man/kaffe.1.in: Fixes for manpages.

2005-08-08  Andreas Tobler  <toa@pop.agri.ch>

	* config/sparc/trampolines.S: Set alignment to 8
	to accomodate 64bit sparcs.

2005-08-08  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/jni/jni-base.c (JNI_CreateJavaVM):
	Moved errbuf into JVMPI section to fix compiler warning.

2005-08-08  Dalibor Topic  <robilad@kaffe.org>

	Fixed make distcheck.

	* include/Makefile.am: Added kaffe/trampoline.h.
	(DISTCLEANFILES) Added config-int.h.

	* test/jni/Makefile.am (CLEANFILES) Added *.class files.

	* po/de.po,
	po/fr.po,
	po/kaffe.pot,
	po/zh_CN.po,
	po/zh_TW.po: Regenerated.

2005-08-08  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-08-07  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * org/omg/DynamicAny/AnySeqHelper.java,
        org/omg/DynamicAny/NameDynAnyPairSeqHelper.java,
        org/omg/DynamicAny/NameValuePairHelper.java,
        org/omg/DynamicAny/NameDynAnyPairHelper.java,
        org/omg/DynamicAny/NameValuePairSeqHelper.java,
        org/omg/DynamicAny/DynAnySeqHelper.java,
        gnu/CORBA/DynAnySeqHolder.java,
        gnu/CORBA/NameDynAnyPairSeqHolder.java,
        gnu/CORBA/NameDynAnyPairHolder.java,
        gnu/CORBA/NameValuePairSeqHolder.java,
        gnu/CORBA/NameValuePairHolder.java: New files.

	2005-08-07  Ito Kazumitsu <kaz@maczuka.gcd.org>

        Fixes bug #22929
        * libraries/javalib/java/net/NetworkInterface.java
        (condense): New static private method.
        (getNetworkInterfaces): Call condense().
        (getByName, getByInetAddress): Call getNetworkInterfaces()
        so that condensed result may be returned.

        * vm/reference/java/net/VMNetworkInterface.java (getInterfaces):
        Clarify return value in documentation.

	2005-08-07  Mark Wielaard  <mark@klomp.org>

        Fixes bug #22920